--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
@@ -23,9 +24,14 @@ android {
     }
 
     buildTypes {
+        debug{
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", 'DB_NAME', '"destination.db"')
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", 'DB_NAME', '"destination.db"')
         }
     }
     compileOptions {
@@ -70,8 +76,10 @@ dependencies {
     implementation 'androidx.compose.animation:animation:1.3.1'
 
     //Room
-    implementation "androidx.room:room-ktx:2.4.3"
-    annotationProcessor "androidx.room:room-compiler:2.4.3"
+
+    implementation("androidx.room:room-ktx:$room_version")
+    // To use Kotlin annotation processing tool (kapt)
+    kapt("androidx.room:room-compiler:$room_version")
 
     //Timber
     implementation "com.jakewharton.timber:timber:$timberVersion"
