--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         nav_version = '2.5.2'
         timberVersion = '5.0.1'
         compose_hilt_navigation_version = "1.0.0"
+        room_version ='2.4.3'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
